--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "element-plus": "^2.6.1",
+    "flv.js": "^1.6.2",
+    "hls.js": "^1.5.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
